# QuantEngine-Cpp

./: .gitignore  CMakeLists.txt  README.md  market_data.csv
build_cmd/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  QuantEngine.sln  QuantEngine.vcxproj  QuantEngine.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
build_cmd/QuantEngine.dir/Debug/: QuantEngine.exe.recipe  QuantEngine.ilk
build_cmd/QuantEngine.dir/Debug/QuantEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_cmd/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_cmd/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_cmd/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
include/: MarketDataParser.h  OrderBook.h  SimpleStrategy.h
src/: MarketDataParser.cpp  OrderBook.cpp  main.cpp
